# MARS

./: .gitattributes  .gitignore  CHANGELOG.md  CLEANUP_E01.sh  FIREFOX_JSONLZ4.md  LICENSE  NEXT_SESSION.md  PHOTOREC_PIPELINE.md  PIPELINE_DESIGN.md  README.md  THIRD-PARTY-NOTICES.md  photorec.ses  pyproject.toml  test_number_boundary.py  test_uuid_and_url_fixes.py
.github/workflows/: build-dfvfs-wheels.yml  deploy-docs.yml
packaging/: README.md  build-wheels.sh  build.sh  create-release.sh  install-macos.sh  install-windows.bat
scripts/: build_readme_html.py
src/apple_sqlite_logparser/: apple_sqlite_logparser.py  generate_powerlog_schema_rubric.py  main.py  salvage_with_rubrics.py  schema_manager.py
src/apple_sqlite_logparser/utils/: .gitattributes  sqlite_dissect
src/mac_log_sleuth/: apple_sqlite_logparser.py  generate_powerlog_schema_rubric.py  powerlog_plotter.py  rubric_loader.py  salvage_with_rubrics.py  schema_manager.py  text_log_fingerprinter.py
src/mac_log_sleuth/carver/: CLI_USAGE.md  PROTOBUF_FILTERING.md  README.md  TIMESTAMP_VALIDATION.md  V2_SYSTEM_OVERVIEW.md  carve_sqlite.py  id_detectors.py  protobuf_decoder_bbpb.py  protobuf_extractor.py  protobuf_timestamp_extractor.py  timestamp_classifier.py  timestamp_classifier_v2.py  timestamp_patterns.py  timestamp_validator.py  url_analyzer.py
src/mac_log_sleuth/catalog/: database_catalog.yaml  macos_databases.yaml
src/mac_log_sleuth/pipeline/: e01_workflow.py  exemplar_scanner.py  extract_databases.py  mount_e01.py  mount_partition.sh  multi_partition_scanner.py  output_structure.py  photorec_processor.py  test_exemplar_scanner.py
src/mac_log_sleuth/plotter/: db.py  rendering.py  tui.py  utils.py
src/mars/carver/: README.md  batch_carver.py  carve_sqlite.py  finders.py  sqlite_utils.py
src/mars/carver/output/: __init__.py  writers.py
src/mars/carver/protobuf/: __init__.py  decoder.py  timestamp_extractor.py
src/mars/carver/timestamp/: __init__.py  classifier.py  patterns.py  text_scanner.py  types.py
src/mars/carver/unfurl/: __init__.py  analyzer.py  id_detectors.py
src/mars/catalog/: README.md  artifact_recovery_catalog.yaml  catalog_editor.py  glob_validator.py
src/mars/cli/: __init__.py  app.py  arc_manager_ui.py  args.py  comparison_ui.py  ewf_mount_ui.py  exemplar_packager.py  exemplar_scan_ui.py  explorer.py  export_packager.py  export_ui.py  free_match.py  plotter_ui.py  scan_report_generator.py  settings_ui.py  target_scan_ui.py  time_machine_ui.py
src/mars/cli/commands/: __init__.py
src/mars/cli/export/: __init__.py  types.py
src/mars/config/: __init__.py  loader.py  paths.py  schema.py
src/mars/pipeline/: README.md
src/mars/pipeline/common/: catalog_manager.py
src/mars/pipeline/comparison/: __init__.py  comparison_calculator.py  html_report.py  types.py
src/mars/pipeline/exemplar_scanner/: __init__.py  cleanup_manager.py  database_processor.py  database_scanner.py  dfvfs_manager.py  directory_indexer.py  exemplar_cataloger.py  exemplar_orchestrator.py  manifest_processor.py  schema_generator.py  workspace_manager.py
src/mars/pipeline/fingerprinter/: README.md  __init__.py  text_fingerprinter.py
src/mars/pipeline/lf_processor/: README.md  __init__.py  db_reconstructor.py  lf_catalog.py  lf_combiner.py  lf_matcher.py  lf_merge.py  lf_nearest.py  lf_orchestrator.py  lf_orphan.py  lf_reconstruction.py  lf_splitter.py  uc_helpers.py
src/mars/pipeline/matcher/: __init__.py  generate_sqlite_schema_rubric.py  multi_user_splitter.py  rubric_generator.py  rubric_utils.py
src/mars/pipeline/mount_utils/: __init__.py  cleanup_orphaned_mounts.py  dfvfs_exporter.py  dfvfs_glob_utils.py  e01_mounter.py  get_gpt_names.py
src/mars/pipeline/output/: __init__.py  database_combiner.py  structure.py
src/mars/plotter/: README.md  __init__.py  db.py  rendering.py  selection_buffer.py  sqlite_plotter.py  tui.py  utils.py
src/mars/report_modules/: README.md  __init__.py  argument_builder.py  module_config.py  module_runner.py  progress_interface.py  report_module_manager.py  target_resolver.py
src/mars/utils/: __init__.py  cleanup_utilities.py  compression_utils.py  database_utils.py  debug_logger.py  file_utils.py  platform_utils.py  progress_utils.py  time_machine_utils.py
src/resources/docs/: libewf-fuse-t-README.txt
src/resources/help/: default.css  mars_architecture.html  mars_help.html
src/resources/licenses/: ccl_segb-README.md  sql-dissect-README.md  zlib-LICENSE.txt
tests/: README.md  __init__.py  test_biome_parser.py  test_compression_utils.py  test_config_schema.py  test_database_utils.py  test_glob_utils.py  test_platform_utils.py  test_protobuf_decoder.py  test_rubric_utils.py  test_skip_list.py  test_timestamp_utils.py
(+54 files in other folders)
