[project]
name = "mac_log_sleuth"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dfir-unfurl>=20250810",
    "plotly>=6.3.1",
    "time-decode>=10.1.0",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project.optional-dependencies]
plotly = [
    "pandas>=2.3.3",
    "kaleido>=1.1.0",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
]

[tool.ruff]
[tool.ruff.lint]
select = [
  "E",        
  "F",        
  "W",        
  "I",        
  "UP",       
  "C4",       
  "FA",       
  "ISC",      
  "ICN"
]

extend-select = [
    "F",        
    "W",        
    "E",        
    "I",        
    "UP",       
    "C4",       
    "FA",       
    "ISC",      
    "ICN",      
    "RET",      
    "SIM",     
    "TID",      
    "TC",      
    "PTH",      
    "TD",      
  "NPY"      
]

ignore = [
    "B011",
    "E501"
]
